--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -602,7 +602,7 @@ function activeLink(urlPart) {
                 </div>
               </article>
             </div>
-            <a href="/guide/comparison-with-leading-frameworks.html" class="comparison__content-wrapper-button">Compare with Cypress and Playwright</a>
+            <a href="/guide/comparison-with-leading-frameworks.html" class="comparison__content-wrapper-button"></a>
           </div>
         </article>
       </section>
