--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -1302,7 +1302,7 @@
   border: 5px solid var(--border-color);
   display: flex;
   flex-direction: column;
-  padding: 60px 16px 33px 23px;
+  padding: 60px 57px 36px 32px;
   flex: 1 1 0;
 }
 
@@ -1448,8 +1448,9 @@
   .capabilities__heading {
     font-size: var(--font-size-h4);
     line-height: var(--line-height-h4);
-    padding: 40px 30px 35px 14px;
+    padding: 40px 60px 35px 14px;
     text-align: unset;
+    max-width: unset;
   }
 
   .capabilities--double-column .capabilities__card .capabilities__card-text-list-item {
@@ -1864,9 +1865,8 @@
 
   .performance__content-description-button {
     font-size: var(--font-size-base);
-    line-height: var(--line-height-base);
-    padding: 16px 20px;
     line-height: var(--line-height-base-l);
+    padding: 10px 20px;
   }
 }
 
@@ -3055,6 +3055,12 @@
   cursor: pointer;
   transition: 0.4s ease-in-out;
   will-change: background, color, border, box-shadow;
+}
+
+@media (max-width: 1280px) {
+  .call-to-action {
+    gap: 54px;
+  }
 }
 
 @media (max-width: 1024px) {
