Adding fixes to meta descriptions for all about pages

--- a/src/pages/about/index.ejs
+++ b/src/pages/about/index.ejs
@@ -5,8 +5,8 @@ const data = {
     section: 'about',
     pageContent: page.content,
     pageUrl: page.url,
-    pageTitle: 'About | Nightwatch.js',
-    pageDescription: 'How to get in touch with the team, and where to submit bugs and feature requests.',
+    pageTitle: page.title || 'About | Nightwatch.js',
+    pageDescription: page.description || 'How to get in touch with the team, and where to submit bugs and feature requests.',
     pageImage: '/img/banners/nightwatch.jpg'
 };
 %>
