add missing api pages

--- a/src/includes/api-sidebar.ejs
+++ b/src/includes/api-sidebar.ejs
@@ -133,6 +133,8 @@
                 <ul class="btn-toggle-nav local-nav">
                     <li class="nav-item"><a href="/api/document/injectScript.html">injectScript</a></li>
                     <li class="nav-item"><a href="/api/document/source.html">source</a></li>
+                    <li class="nav-item"><a href="/api/document/executeScript.html">execute</a></li>
+                    <li class="nav-item"><a href="/api/document/executeAsyncScript.html">executeAsync</a></li>
                 </ul>
             </div>
         </li>
@@ -212,6 +214,7 @@
                                 <li><a href="/api/element/getTagName.html">getTagName</a></li>
                                 <li><a href="/api/element/getText.html">getText</a></li>
                                 <li><a href="/api/element/getValue.html">getValue</a></li>
+                                <li><a href="/api/element/setValue.html">setValue</a></li>
                                 <li><a href="/api/element/getId.html">getId</a></li>
                                 <li><a href="/api/hasDescendants.html">hasDescendants</a></li>
                                 <li><a href="/api/isEnabled.html">isEnabled</a></li>
