add missing api pages

--- a/src/includes/api-sidebar.ejs
+++ b/src/includes/api-sidebar.ejs
@@ -17,8 +17,47 @@
 
             <div class="collapse" id="index-collapse" data-section-url="/api/">
                 <ul class="btn-toggle-nav local-nav">
-                    <li><a href="/api/#the-browser-object">browser object</a></li>
-                    <li class="nav-item"><a href="/api/#api-contents">browser API</a></li>
+                    <li class="overview nav-item"><a href="/api/#the-browser-object">Overview</a></li>
+                    <li class="nav-item"><a href="/api/init.html">init</a></li>
+                    <li class="nav-item"><a href="/api/getTitle.html">getTitle</a></li>
+                    <li class="nav-item"><a href="/api/urlHash.html">urlHash</a></li>
+                    <li class="nav-item"><a href="/api/end.html">end</a></li>
+                    <li class="nav-item"><a href="/api/getLog.html">getLog</a></li>
+                    <li class="nav-item"><a href="/api/getLogTypes.html">getLogTypes</a></li>
+                    <li class="nav-item"><a href="/api/isLogAvailable.html">isLogAvailable</a></li>
+                    <li class="nav-item"><a href="/api/saveScreenshot.html">saveScreenshot</a></li>
+                    <li class="nav-item"><a href="/api/saveSnapshot.html">saveSnapshot</a></li>
+                    <li class="nav-item"><a href="/api/debug.html">debug</a></li>
+                    <li class="nav-item"><a href="/api/pause.html">pause</a></li>
+                    <li class="nav-item"><a href="/api/perform.html">perform</a></li>
+                    <li class="nav-item"><a href="/api/useCss.html">useCss</a></li>
+                    <li class="nav-item"><a href="/api/useXpath.html">useXpath</a></li>
+                    <li class="nav-item"><a href="/api/captureBrowserConsoleLogs.html">captureBrowserConsoleLogs</a></li>
+                    <li class="nav-item"><a href="/api/captureBrowserExceptions.html">captureBrowserExceptions</a></li>
+                    <li class="nav-item"><a href="/api/enablePerformanceMetrics.html">enablePerformanceMetrics</a></li>
+                    <li class="nav-item"><a href="/api/getPerformanceMetrics.html">getPerformanceMetrics</a></li>
+                    <li class="nav-item"><a href="/api/registerBasicAuth.html">registerBasicAuth</a></li>
+                    <li class="nav-item"><a href="/api/setDeviceDimensions.html">setDeviceDimensions</a></li>
+                    <li class="nav-item"><a href="/api/setGeolocation.html">setGeolocation</a></li>
+                    <li class="nav-item"><a href="/api/takeHeapSnapshot.html">takeHeapSnapshot</a></li>
+                    <li class="nav-item"><a href="/api/back.html">back</a></li>
+                    <li class="nav-item"><a href="/api/forward.html">forward</a></li>
+                    <li class="nav-item"><a href="/api/getCurrentUrl.html">getCurrentUrl</a></li>
+                    <li class="nav-item"><a href="/api/url.html">url</a></li>
+                    <li class="nav-item"><a href="/api/navigateTo.html">navigateTo</a></li>
+                    <li class="nav-item"><a href="/api/quit.html">quit</a></li>
+                    <li class="nav-item"><a href="/api/refresh.html">refresh</a></li>
+                    <li class="nav-item"><a href="/api/submit.html">submit</a></li>
+                    <li class="nav-item"><a href="/api/frame.html">frame</a></li>
+                    <li class="nav-item"><a href="/api/frameParent.html">frameParent</a></li>
+                    <li class="nav-item"><a href="/api/screenshot.html">screenshot</a></li>
+                    <li class="nav-item"><a href="/api/waitUntil.html">waitUntil</a></li>
+                    <li class="nav-item"><a href="/api/session.html">session</a></li>
+                    <li class="nav-item"><a href="/api/sessions.html">sessions</a></li>
+                    <li class="nav-item"><a href="/api/status.html">status</a></li>
+                    <li class="nav-item"><a href="/api/timeouts.html">timeouts</a></li>
+                    <li class="nav-item"><a href="/api/timeoutsAsyncScript.html">timeoutsAsyncScript</a></li>
+                    <li class="nav-item"><a href="/api/timeoutsImplicitWait.html">timeoutsImplicitWait</a></li>
                 </ul>
             </div>
 
@@ -133,8 +172,8 @@
                 <ul class="btn-toggle-nav local-nav">
                     <li class="nav-item"><a href="/api/document/injectScript.html">injectScript</a></li>
                     <li class="nav-item"><a href="/api/document/source.html">source</a></li>
-                    <li class="nav-item"><a href="/api/document/executeScript.html">execute</a></li>
-                    <li class="nav-item"><a href="/api/document/executeAsyncScript.html">executeAsync</a></li>
+                    <li class="nav-item"><a href="/api/document/execute.html">executeScript</a></li>
+                    <li class="nav-item"><a href="/api/document/executeAsync.html">executeAsyncScript</a></li>
                 </ul>
             </div>
         </li>
@@ -298,6 +337,19 @@
             <div class="collapse" id="firefox-collapse" data-section-url="/api/firefox/">
                 <ul class="btn-toggle-nav local-nav">
                     <li class="nav-item"><a href="/api/firefox/">Overview</a></li>
+                </ul>
+            </div>
+        </li>
+
+        <li>
+            <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#network-collapse" aria-expanded="false">
+                <a>.network</a>
+            </button>
+            <div class="collapse" id="network-collapse" data-section-url="/api/network/">
+                <ul class="btn-toggle-nav local-nav">
+                    <li class="nav-item"><a href="/api/network/captureRequests.html">captureRequests</a></li>
+                    <li class="nav-item"><a href="/api/network/mockResponse.html">mockResponse</a></li>
+                    <li class="nav-item"><a href="/api/network/setConditions.html">setConditions</a></li>
                 </ul>
             </div>
         </li>
