add missing api pages

--- a/src/includes/api-sidebar.ejs
+++ b/src/includes/api-sidebar.ejs
@@ -17,7 +17,7 @@
 
             <div class="collapse" id="index-collapse" data-section-url="/api/">
                 <ul class="btn-toggle-nav local-nav">
-                    <li class="overview nav-item"><a href="/api/#the-browser-object">Overview</a></li>
+                    <li class="overview nav-item"><a href="/api/">Overview</a></li>
                     <li class="nav-item"><a href="/api/init.html">init</a></li>
                     <li class="nav-item"><a href="/api/getTitle.html">getTitle</a></li>
                     <li class="nav-item"><a href="/api/urlHash.html">urlHash</a></li>
@@ -30,6 +30,8 @@
                     <li class="nav-item"><a href="/api/debug.html">debug</a></li>
                     <li class="nav-item"><a href="/api/pause.html">pause</a></li>
                     <li class="nav-item"><a href="/api/perform.html">perform</a></li>
+                    <li class="nav-item"><a href="/api/axeInject.html">axeInject</a></li>
+                    <li class="nav-item"><a href="/api/axeRun.html">axeRun</a></li>
                     <li class="nav-item"><a href="/api/useCss.html">useCss</a></li>
                     <li class="nav-item"><a href="/api/useXpath.html">useXpath</a></li>
                     <li class="nav-item"><a href="/api/captureBrowserConsoleLogs.html">captureBrowserConsoleLogs</a></li>
@@ -242,6 +244,7 @@
 
                         <div class="collapse" id="elementstate-collapse">
                             <ul class="btn-toggle-nav local-nav">
+                                <li><a href="/api/clearValue.html">clearValue</a></li>
                                 <li><a href="/api/elementActive.html">elementActive</a></li>
                                 <li><a href="/api/element/getAccessibleName.html">getAccessibleName</a></li>
                                 <li><a href="/api/element/getAriaRole.html">getAriaRole</a></li>
