change searchbox placeholder text

--- a/src/includes/api-sidebar.ejs
+++ b/src/includes/api-sidebar.ejs
@@ -9,7 +9,7 @@
 
 <nav class="doc-links collapse clearfix nav-fix" id="doc-sidebar-nav">
     <div class="filter-container">
-        <input type="search" id="sidebar-filter" autocomplete="off"  placeholder="Filter by title"/>
+        <input type="search" id="sidebar-filter" autocomplete="off"  placeholder="Search"/>
         <ul class="filter-list"></ul>
     </div>
 
