--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,19 +119,36 @@ a {
   height: inherit;
 }
 
-.navigation-list:first-of-type li:nth-of-type(1):hover~.navigation-link-active-state {
+
+.navigation .navigation-list:first-of-type li:nth-child(1):hover~.navigation-link-active-state {
   left: -12px;
 }
 
-.navigation-list:first-of-type li:nth-of-type(2):hover~.navigation-link-active-state {
+.navigation-list:first-of-type li:nth-child(1).active~.navigation-link-active-state {
+  left: -12px;
+}
+
+.navigation .navigation-list:first-of-type li:nth-child(2):hover~.navigation-link-active-state {
   left: 71px;
 }
 
-.navigation-list:first-of-type li:nth-of-type(3):hover~.navigation-link-active-state {
+.navigation-list:first-of-type li:nth-child(2).active~.navigation-link-active-state {
+  left: 71px;
+}
+
+.navigation .navigation-list:first-of-type li:nth-of-type(3):hover~.navigation-link-active-state {
   left: 158px;
 }
 
-.navigation-list:first-of-type li:nth-of-type(4):hover~.navigation-link-active-state {
+.navigation-list:first-of-type li:nth-child(3).active~.navigation-link-active-state {
+  left: 158px;
+}
+
+.navigation .navigation-list:first-of-type li:nth-of-type(4):hover~.navigation-link-active-state {
+  left: 244px;
+}
+
+.navigation-list:first-of-type li:nth-child(4).active~.navigation-link-active-state {
   left: 244px;
 }
 
@@ -342,7 +359,7 @@ a {
     height: 20px;
     width: 20px;
   }
-  
+
   .navigation-menu-toggle {
     padding: 0;
   }
