fix api generation issue

--- a/src/pages/api/index.ejs
+++ b/src/pages/api/index.ejs
@@ -33,7 +33,7 @@ const data = {
 };
 const apiData = await api;
 
-generateApiPages(apiData, Config);
+await generateApiPages(apiData, Config);
 %>
 
 <!DOCTYPE html>
