revert unnecessary changes

--- a/src/pages/api/index.ejs
+++ b/src/pages/api/index.ejs
@@ -33,7 +33,7 @@ const data = {
 };
 const apiData = await api;
 
-await generateApiPages(apiData, Config);
+generateApiPages(apiData, Config);
 %>
 
 <!DOCTYPE html>
