add waitfor and waituntil commands

--- a/src/includes/api-sidebar.ejs
+++ b/src/includes/api-sidebar.ejs
@@ -23,48 +23,52 @@
             <div class="collapse" id="index-collapse" data-section-url="/api/">
                 <ul class="btn-toggle-nav local-nav">
                     <li class="overview nav-item"><a href="/api/">Overview</a></li>
-                    <li class="nav-item" data-api-name="init"><a href="/api/init.html">init</a></li>
-                    <li class="nav-item" data-api-name="getTitle"><a href="/api/getTitle.html">getTitle</a></li>
-                    <li class="nav-item" data-api-name="urlHash"><a href="/api/urlHash.html">urlHash</a></li>
-                    <li class="nav-item" data-api-name="end"><a href="/api/end.html">end</a></li>
-                    <li class="nav-item" data-api-name="getLog"><a href="/api/getLog.html">getLog</a></li>
-                    <li class="nav-item" data-api-name="getLogTypes"><a href="/api/getLogTypes.html">getLogTypes</a></li>
-                    <li class="nav-item" data-api-name="isLogAvailable"><a href="/api/isLogAvailable.html">isLogAvailable</a></li>
-                    <li class="nav-item" data-api-name="saveScreenshot"><a href="/api/saveScreenshot.html">saveScreenshot</a></li>
-                    <li class="nav-item" data-api-name="saveSnapshot"><a href="/api/saveSnapshot.html">saveSnapshot</a></li>
-                    <li class="nav-item" data-api-name="debug"><a href="/api/debug.html">debug</a></li>
-                    <li class="nav-item" data-api-name="pause"><a href="/api/pause.html">pause</a></li>
-                    <li class="nav-item" data-api-name="perform"><a href="/api/perform.html">perform</a></li>
                     <li class="nav-item" data-api-name="axeInject"><a href="/api/axeInject.html">axeInject</a></li>
                     <li class="nav-item" data-api-name="axeRun"><a href="/api/axeRun.html">axeRun</a></li>
-                    <li class="nav-item" data-api-name="useCss"><a href="/api/useCss.html">useCss</a></li>
-                    <li class="nav-item" data-api-name="useXpath"><a href="/api/useXpath.html">useXpath</a></li>
+                    <li class="nav-item" data-api-name="back"><a href="/api/back.html">back</a></li>
                     <li class="nav-item" data-api-name="captureBrowserConsoleLogs"><a href="/api/captureBrowserConsoleLogs.html">captureBrowserConsoleLogs</a></li>
                     <li class="nav-item" data-api-name="captureBrowserExceptions"><a href="/api/captureBrowserExceptions.html">captureBrowserExceptions</a></li>
+                    <li class="nav-item" data-api-name="debug"><a href="/api/debug.html">debug</a></li>
                     <li class="nav-item" data-api-name="enablePerformanceMetrics"><a href="/api/enablePerformanceMetrics.html">enablePerformanceMetrics</a></li>
-                    <li class="nav-item" data-api-name="getPerformanceMetrics"><a href="/api/getPerformanceMetrics.html">getPerformanceMetrics</a></li>
-                    <li class="nav-item" data-api-name="registerBasicAuth"><a href="/api/registerBasicAuth.html">registerBasicAuth</a></li>
-                    <li class="nav-item" data-api-name="setDeviceDimensions"><a href="/api/setDeviceDimensions.html">setDeviceDimensions</a></li>
-                    <li class="nav-item" data-api-name="setGeolocation"><a href="/api/setGeolocation.html">setGeolocation</a></li>
-                    <li class="nav-item" data-api-name="takeHeapSnapshot"><a href="/api/takeHeapSnapshot.html">takeHeapSnapshot</a></li>
-                    <li class="nav-item" data-api-name="back"><a href="/api/back.html">back</a></li>
+                    <li class="nav-item" data-api-name="end"><a href="/api/end.html">end</a></li>
                     <li class="nav-item" data-api-name="forward"><a href="/api/forward.html">forward</a></li>
-                    <li class="nav-item" data-api-name="getCurrentUrl"><a href="/api/getCurrentUrl.html">getCurrentUrl</a></li>
-                    <li class="nav-item" data-api-name="url"><a href="/api/url.html">url</a></li>
-                    <li class="nav-item" data-api-name="navigateTo"><a href="/api/navigateTo.html">navigateTo</a></li>
-                    <li class="nav-item" data-api-name="quit"><a href="/api/quit.html">quit</a></li>
-                    <li class="nav-item" data-api-name="refresh"><a href="/api/refresh.html">refresh</a></li>
-                    <li class="nav-item" data-api-name="submit"><a href="/api/submit.html">submit</a></li>
                     <li class="nav-item" data-api-name="frame"><a href="/api/frame.html">frame</a></li>
                     <li class="nav-item" data-api-name="frameParent"><a href="/api/frameParent.html">frameParent</a></li>
+                    <li class="nav-item" data-api-name="getCurrentUrl"><a href="/api/getCurrentUrl.html">getCurrentUrl</a></li>
+                    <li class="nav-item" data-api-name="getLog"><a href="/api/getLog.html">getLog</a></li>
+                    <li class="nav-item" data-api-name="getLogTypes"><a href="/api/getLogTypes.html">getLogTypes</a></li>
+                    <li class="nav-item" data-api-name="getPerformanceMetrics"><a href="/api/getPerformanceMetrics.html">getPerformanceMetrics</a></li>
+                    <li class="nav-item" data-api-name="getTitle"><a href="/api/getTitle.html">getTitle</a></li>
+                    <li class="nav-item" data-api-name="init"><a href="/api/init.html">init</a></li>
+                    <li class="nav-item" data-api-name="isLogAvailable"><a href="/api/isLogAvailable.html">isLogAvailable</a></li>
+                    <li class="nav-item" data-api-name="navigateTo"><a href="/api/navigateTo.html">navigateTo</a></li>
+                    <li class="nav-item" data-api-name="pause"><a href="/api/pause.html">pause</a></li>
+                    <li class="nav-item" data-api-name="perform"><a href="/api/perform.html">perform</a></li>
+                    <li class="nav-item" data-api-name="quit"><a href="/api/quit.html">quit</a></li>
+                    <li class="nav-item" data-api-name="refresh"><a href="/api/refresh.html">refresh</a></li>
+                    <li class="nav-item" data-api-name="registerBasicAuth"><a href="/api/registerBasicAuth.html">registerBasicAuth</a></li>
+                    <li class="nav-item" data-api-name="saveScreenshot"><a href="/api/saveScreenshot.html">saveScreenshot</a></li>
+                    <li class="nav-item" data-api-name="saveSnapshot"><a href="/api/saveSnapshot.html">saveSnapshot</a></li>
                     <li class="nav-item" data-api-name="screenshot"><a href="/api/screenshot.html">screenshot</a></li>
-                    <li class="nav-item" data-api-name="waitUntil"><a href="/api/waitUntil.html">waitUntil</a></li>
                     <li class="nav-item" data-api-name="session"><a href="/api/session.html">session</a></li>
                     <li class="nav-item" data-api-name="sessions"><a href="/api/sessions.html">sessions</a></li>
+                    <li class="nav-item" data-api-name="setDeviceDimensions"><a href="/api/setDeviceDimensions.html">setDeviceDimensions</a></li>
+                    <li class="nav-item" data-api-name="setGeolocation"><a href="/api/setGeolocation.html">setGeolocation</a></li>
                     <li class="nav-item" data-api-name="status"><a href="/api/status.html">status</a></li>
+                    <li class="nav-item" data-api-name="submit"><a href="/api/submit.html">submit</a></li>
+                    <li class="nav-item" data-api-name="takeHeapSnapshot"><a href="/api/takeHeapSnapshot.html">takeHeapSnapshot</a></li>
                     <li class="nav-item" data-api-name="timeouts"><a href="/api/timeouts.html">timeouts</a></li>
                     <li class="nav-item" data-api-name="timeoutsAsyncScript"><a href="/api/timeoutsAsyncScript.html">timeoutsAsyncScript</a></li>
                     <li class="nav-item" data-api-name="timeoutsImplicitWait"><a href="/api/timeoutsImplicitWait.html">timeoutsImplicitWait</a></li>
+                    <li class="nav-item" data-api-name="url"><a href="/api/url.html">url</a></li>
+                    <li class="nav-item" data-api-name="urlHash"><a href="/api/urlHash.html">urlHash</a></li>
+                    <li class="nav-item" data-api-name="useCss"><a href="/api/useCss.html">useCss</a></li>
+                    <li class="nav-item" data-api-name="useXpath"><a href="/api/useXpath.html">useXpath</a></li>
+                    <li class="nav-item" data-api-name="waitForElementNotPresent"><a href="/api/waitForElementNotPresent.html">waitForElementNotPresent</a></li>
+                    <li class="nav-item" data-api-name="waitForElementNotVisible"><a href="/api/waitForElementNotVisible.html">waitForElementNotVisible</a></li>
+                    <li class="nav-item" data-api-name="waitForElementPresent"><a href="/api/waitForElementPresent.html">waitForElementPresent</a></li>
+                    <li class="nav-item" data-api-name="waitForElementVisible"><a href="/api/waitForElementVisible.html">waitForElementVisible</a></li>
+                    <li class="nav-item" data-api-name="waitUntil"><a href="/api/waitUntil.html">waitUntil</a></li>
                 </ul>
             </div>
 
@@ -280,6 +284,7 @@
 
                         <div class="collapse" id="apiuseractions-collapse">
                             <ul class="btn-toggle-nav local-nav">
+                                <li data-api-name="element.waitUntil"><a href="/api/element/waitUntil.html">waitUntil</a></li>
                                 <li data-api-name="element.clickAndHold"><a href="/api/element/clickAndHold.html">clickAndHold</a></li>
                                 <li data-api-name="element.doubleClick"><a href="/api/element/doubleClick.html">doubleClick</a></li>
                                 <li data-api-name="element.rightClick"><a href="/api/element/rightClick.html">rightClick</a></li>
