fixed execute command links

--- a/src/includes/api-sidebar.ejs
+++ b/src/includes/api-sidebar.ejs
@@ -183,8 +183,8 @@
                 <ul class="btn-toggle-nav local-nav">
                     <li class="nav-item" data-api-name="document.injectScript"><a href="/api/document/injectScript.html">injectScript</a></li>
                     <li class="nav-item" data-api-name="document.source"><a href="/api/document/source.html">source</a></li>
-                    <li class="nav-item" data-api-name="document.executeScript"><a href="/api/document/execute.html">executeScript</a></li>
-                    <li class="nav-item" data-api-name="document.executeAsyncScript"><a href="/api/document/executeAsync.html">executeAsyncScript</a></li>
+                    <li class="nav-item" data-api-name="document.executeScript"><a href="/api/document/executeScript.html">executeScript</a></li>
+                    <li class="nav-item" data-api-name="document.executeAsyncScript"><a href="/api/document/executeScriptAsync.html">executeAsyncScript</a></li>
                 </ul>
             </div>
         </li>
