wrong contributing link fixed

--- a/src/includes/sections/about.ejs
+++ b/src/includes/sections/about.ejs
@@ -319,7 +319,7 @@
             </p>
             <p>New contributors: please also have a look at these resources:</p>
             <ul>
-              <li><a href="https://github.com/nightwatchjs/nightwatch/blob/main/.github/CONTRIBUTING.md"
+              <li><a href="https://github.com/nightwatchjs/nightwatch/blob/main/CONTRIBUTING.md"
                      target="_blank">Contributing to Nightwatch</a></li>
               <li><a href="https://github.com/nightwatchjs/nightwatch/blob/main/CODE_OF_CONDUCT.md" target="_blank">Code
                   of Conduct</a></li>
