Fix broken links

--- a/src/includes/footer.ejs
+++ b/src/includes/footer.ejs
@@ -28,7 +28,7 @@
             <ul>
               <li><a href="/guide/overview/what-is-nightwatch.html">What is Nightwatch?</a></li>
               <li><a href="/guide/quickstarts/create-and-run-a-nightwatch-test.html">Run your first Test</a></li>
-              <li><a href="https://marketplace.visualstudio.com/items?itemName=browserstackcom.nightwatch#:~:text=The%20Nightwatch%20Extension%20for%20Visual,in%20a%20single%2C%20integrated%20environment.html">Start with VS code</a></li>
+              <li><a href="https://marketplace.visualstudio.com/items?itemName=browserstackcom.nightwatch">Start with VS code</a></li>
               <li><a href="/guide/mobile-app-testing/introduction.html">Test on mobile devices</a></li>
               <li><a href="/api/">API reference</a></li>
               <li><a href="/guide/">Guide</a></li>
