Fix broken links

--- a/src/pages/guide/comparison-with-leading-frameworks.ejs
+++ b/src/pages/guide/comparison-with-leading-frameworks.ejs
@@ -141,7 +141,7 @@ const data = {
         <td>
           <span class="comp-yes">✅</span> <br>
           <p>Mobile web is just as easy to setup and supports everything from Desktop web.
-            <br><a href="#">Get Started</a>
+            <br><a href="https://nightwatchjs.org/guide/mobile-app-testing/introduction.html">Get Started</a>
           </p>
         </td>
         <td>❌</td>
@@ -229,7 +229,7 @@ const data = {
       </tr>
       <tr>
         <td><b>VS Code extension</b></td>
-        <td><span class="comp-yes">✅</span> <a href="#">Try now</a></td>
+        <td><span class="comp-yes">✅</span> <a href="https://marketplace.visualstudio.com/items?itemName=browserstackcom.nightwatch#:~:text=The%20Nightwatch%20Extension%20for%20Visual,in%20a%20single%2C%20integrated%20environment.html">Try now</a></td>
         <td>❌</td>
         <td><span class="comp-yes">✅</span></td>
       </tr>
