Fix broken links

--- a/src/includes/sections/about.ejs
+++ b/src/includes/sections/about.ejs
@@ -276,7 +276,7 @@
             <h2 id="contributing-guidelines">Contributing to Nightwatch</h2>
             <p>Report any bugs or feature requests on <a href="https://github.com/nightwatchjs/nightwatch/issues"
                                                          target="_blank">GitHub</a>.
-              Please review the <a href="https://github.com/nightwatchjs/nightwatch/blob/main/.github/CONTRIBUTING.md"
+              Please review the <a href="https://github.com/nightwatchjs/nightwatch/blob/main/CONTRIBUTING.md"
                                    target="_blank">Contributing Guidelines</a> before submitting a new issue.</p>
           </div>
           <div class="docs-sub-section">
@@ -494,8 +494,7 @@
                 <strong class="d-inline-block mb-2">Article</strong>
                 <h3><a href="https://medium.com/kaliop/end-to-end-testing-with-nightwatch-js-a821ad787fa4"
                        target="_blank">End-to-end testing with Nightwatch.js</a></h3>
-                <div class="mb-1 text-muted">Published on Mar 6, 2019 by <a href="https://medium.com/@cavalet.pierre"
-                                                                            target="_blank">Pierre Cavalet</a></div>
+                <div class="mb-1 text-muted">Published on Mar 6, 2019 by <a href="https://medium.com/@cavalet.pierre" target="_blank">Pierre Cavalet</a></div>
                 <p class="card-text mb-auto">A good introductory article of the main features and capabilities of
                   Nightwatch.</p>
               </div>
@@ -506,7 +505,7 @@
               </div>
               <div class="col p-4 d-flex flex-column position-static">
                 <strong class="d-inline-block mb-2">Article</strong>
-                <h3><a href="https://blog.percy.io/visual-testing-in-nightwatch-js-with-percy-1b68c122cf94"
+                <h3><a href="https://www.browserstack.com/guide/visual-regression-testing-in-nightwatchjs#toc3"
                        target="_blank">Visual testing in Nightwatch.js with Percy</a></h3>
                 <div class="mb-1 text-muted">Published on Dec 13, 2018 by <a href="https://twitter.com/d_jones"
                                                                              target="_blank">David Jones</a></div>
