--- a/src/pages/guide/comparison-with-leading-frameworks.ejs
+++ b/src/pages/guide/comparison-with-leading-frameworks.ejs
@@ -30,12 +30,12 @@ const data = {
       <tr>
         <th></th>
         <th>
-          <img src="https://expr.nightwatchjs.org/images/symbol-nightwatch.svg" class="nightwatch-logo" />
+          <img src="https://expr.nightwatchjs.org/images/symbol-nightwatch.svg" class="nightwatch-logo" alt="Nightwatch Logo" />
           Nightwatch
         </th>
-        <th><img src="https://www.cypress.io/images/layouts/navbar-brand.svg" class="cypress-logo"/></th>
+        <th><img src="https://www.cypress.io/_astro/navbar-brand._O9_em9E.svg" class="cypress-logo" alt="Cypress Logo" /></th>
         <th>
-          <img src="https://playwright.dev/img/playwright-logo.svg" class="playwright-logo" />
+          <img src="https://playwright.dev/img/playwright-logo.svg" class="playwright-logo" alt="Playwright Logo" />
           Playwright
         </th>
       </tr>
@@ -141,7 +141,7 @@ const data = {
         <td>
           <span class="comp-yes">✅</span> <br>
           <p>Mobile web is just as easy to setup and supports everything from Desktop web.
-            <br><a href="#">Get Started</a>
+            <br><a href="https://nightwatchjs.org/guide/mobile-app-testing/introduction.html">Get Started</a>
           </p>
         </td>
         <td>❌</td>
@@ -229,7 +229,7 @@ const data = {
       </tr>
       <tr>
         <td><b>VS Code extension</b></td>
-        <td><span class="comp-yes">✅</span> <a href="#">Try now</a></td>
+        <td><span class="comp-yes">✅</span> <a href="https://marketplace.visualstudio.com/items?itemName=browserstackcom.nightwatch">Try now</a></td>
         <td>❌</td>
         <td><span class="comp-yes">✅</span></td>
       </tr>
