text wrap introduced

--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -3044,6 +3044,7 @@
   line-height: var(--line-height-h7-s);
   padding: 12px 20px;
   text-decoration: none;
+  text-wrap:nowrap;
 }
 
 .call-to-action-content-action-button--get-started:hover {
@@ -3061,14 +3062,6 @@
     gap: 30px;
     padding: 40px 20px;
   }
-  .call-to-action-content-action{
-    gap:0;
-    justify-content: space-between;
-  }
-  .call-to-action-content-action-copy-command-button{
-    max-width:100px ;
-  }
-  
 }
 
 @media (max-width: 1024px) {
